tests, dockerfiles, CI, code quality